--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "@types/styled-components": "^5.1.26"
   }
 }
