--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
+    "lodash": "^4.17.21",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.19",
     "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
