--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "lodash": "^4.17.21",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
-    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-multi-date-picker": "^3.3.4",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
