--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
