--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-multi-date-picker": "^3.3.4",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "vite-plugin-svgr": "^2.4.0",
