--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
+    "camelcase-keys": "^8.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pure-react-carousel": "^1.30.1",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-multi-date-picker": "^3.3.4",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
