--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.5",
     "react-switch": "^7.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
