--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fullcalendar/daygrid": "^6.1.4",
     "@fullcalendar/multimonth": "^6.1.4",
     "@fullcalendar/react": "^6.1.4",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
