--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullcalendar/react": "^6.1.4",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.7",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,10 +29,13 @@
     "react-multi-date-picker": "^3.3.4",
     "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.5",
     "react-switch": "^7.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "vite-plugin-svgr": "^2.4.0",
@@ -64,6 +68,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.19",
     "@types/react-helmet": "^6.1.6",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "vite": "^4.0.4"
