--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
+    "usehooks-ts": "^2.9.1",
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.5",
     "web-vitals": "^2.1.4"
